--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^3.0.7",
     "axios": "^0.19.0",
     "filepond": "^4.4.10",
+    "dayjs": "^1.8.15",
     "filepond-plugin-file-rename": "^1.1.4",
     "filepond-plugin-file-validate-size": "^2.1.3",
     "filepond-plugin-file-validate-type": "^1.2.4",
