--- a/package.json
+++ b/package.json
@@ -8,36 +8,36 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
+    "clipboard": "^2.0.8",
     "core-js": "^3.12.1",
-    "vue": "^2.6.12",
-    "lodash": "^4.17.21",
-    "vue-filepond": "^6.0.3",
-    "vue-i18n": "^8.24.4",
-    "vuex": "^3.6.2",
-    "vue-router": "^3.5.1",
-    "axios": "^0.21.1",
-    "filepond": "^4.27.1",
-    "dayjs": "^1.10.4",
+    "dayjs": "^1.10.7",
+    "filepond": "^4.27.3",
     "filepond-plugin-file-rename": "^1.1.8",
-    "filepond-plugin-file-validate-size": "^2.2.4",
+    "filepond-plugin-file-validate-size": "^2.2.5",
     "filepond-plugin-file-validate-type": "^1.2.6",
-    "filepond-plugin-image-overlay": "^1.0.8",
-    "filepond-plugin-image-preview": "^4.6.6",
-    "qs": "^6.10.1",
+    "filepond-plugin-image-overlay": "^1.0.9",
+    "filepond-plugin-image-preview": "^4.6.10",
     "font-awesome": "^4.7.0",
     "iview": "^3.5.4",
     "js-cookie": "^2.2.1",
-    "clipboard": "^2.0.8"
+    "lodash": "^4.17.21",
+    "qs": "^6.10.2",
+    "vue": "^2.6.14",
+    "vue-filepond": "^6.0.3",
+    "vue-i18n": "^8.24.5",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.8.0",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
